minor typographical changes in \section headings

--- a/forallx-adl-interpretations.tex
+++ b/forallx-adl-interpretations.tex
@@ -136,7 +136,7 @@ The symbolisation keys that I considered in chapter \ref{ch.FOL} consequently gi
 \end{ekey}
 \end{tabular}
 
-\section{Representing Interpretations}
+\section{Representing interpretations}
 
 One way of presenting an interpretation that is often convenient is to present its extensions \emph{diagrammatically}. 
 
