--- a/forallx-adl-tfl.tex
+++ b/forallx-adl-tfl.tex
@@ -5,7 +5,7 @@
 
 \chapter{First steps to symbolisation}
 
-\section{Argument Structure}\label{s:ValidityInVirtueOfForm}
+\section{Argument structure}\label{s:ValidityInVirtueOfForm}
 Consider this argument:
 	\begin{earg}
 		\item[] It is raining outside.
@@ -53,13 +53,13 @@ The examples illustrate the idea of validity – conclusiveness in virtue of str
 
 
 
-\section{Identifying Argument Structure}\label{ss.idargstr}
+\section{Identifying argument structure}\label{ss.idargstr}
 
 How can we identify the logical structure of an argument? The logical structure of an argument is the form one arrives at by `abstracting away' the details of the words in an argument, \emph{except for a special set of words}. In the examples above, we removed all details of the arguments except for the special words `and', `or', `not' and `if …, then …', and replaced the other phrases in the argument by placeholder letters `A', `B', etc. (We were careful to replace the same phrase by the same placeholder.)
 
 This raises another question. What makes those words special? Logicians tend to take a pragmatic attitude to this question. They say: \emph{nothing}! If you had chosen different words, you would have come up with a different structure. But there are practical reasons why the words I've already highlighted are useful ones, which I will now discuss.
 
-\section{Formal Languages}
+\section{Formal languages}
 
 In logic, a \define{formal language} is a language which is particularly suited to representing the structure or form of its sentences. Such languages have a precisely defined \define{syntax}, that allows us to specify without difficulty the grammatical sentences of the language, and they also have a precise \define{semantics} which both tells us what meanings \emph{are} in those languages, and assigns meanings to the sentences and their constituents. 
 
@@ -513,7 +513,7 @@ Let's consider some examples.
 
 \end{enumerate}
 
-\section{Main Connectives and Scope} 
+\section{Main connectives and scope} 
 
 Ultimately, every sentence of \TFL\ is constructed in a predictable way out of atomic sentences. When we are dealing with a \emph{sentence} other than an atomic sentence, we can see that there must be some sentential connective that was introduced \emph{last}, when constructing the sentence. We call that the \define{main connective} of the sentence. In the case of `$\enot\enot\enot D$', the main connective is the very first `$\enot$' sign. In the case of `$(P \eand \enot (\enot Q \eor R))$', the main connective is `$\eand$'. In the case of `$((\enot E \eor F) \eif \enot\enot G)$', the main connective is `$\eif$'.
 
@@ -524,7 +524,7 @@ The recursive structure of sentences in \TFL\ also allows us to give a formal de
 
 At the beginning of this chapter, we introduced the sentences of \TFL\ in a way that was parasitic upon identifying the structure of certain English sentences. Now we can see that \TFL\ has its own syntax, which can be understood and used independently of English. Our understanding of the meaning of the sentence connectives is still tied to their English counterparts, but in §\ref{s:SchematicTruthTables} we will see that we can also understand their meaning independently from the natural language we used to motivate them. However, it remains true that what makes \TFL\ \emph{useful} is that its syntax and connectives are designed to capture, more or less, elements of the structure of natural language sentences.
 
-\section{Structure and Ambiguity}
+\section{Structure and ambiguity}
 
 In later sections, we will see the utility of symbolising arguments to evaluate their validity. But even at this early stage, there is value in symbolising sentences, because doing so can clear up \emph{ambiguity}.
 
