--- a/forallx-adl-truthtables.tex
+++ b/forallx-adl-truthtables.tex
@@ -565,7 +565,7 @@ Indeed, when `$\eif$' is flanked with two \TFL\ sentences, the result is a longe
 
 If $\meta{A}\eif\meta{C}$ is a tautology, then $\meta{A}\entails\meta{C}$. But $\meta{A}\eif\meta{C}$ can be true on a valuation without being a tautology, and so can be true on a valuation even when $\meta{A}$ doesn't entail $\meta{C}$. Sometimes people are inclined to confuse entailment and conditionals, perhaps because they are tempted by the thought that we can only establish the truth of a conditional by \emph{logically deriving} the consequent from the antecedent. But while this is the way to establish the truth of a tautologous conditional, most conditionals posit a weaker relation between antecedent and consequent than that – for example, a causal or statistical relationship might be enough to justify the truth of the conditional `If you smoke, then you'll lower your life expectancy'.
 
-\section{Entailment and Validity} \label{s:entailvalid}
+\section{Entailment and validity} \label{s:entailvalid}
 
 We now make an important observation:
 	\factoidbox{
@@ -852,7 +852,7 @@ Using shortcuts, determine whether each sentence is a tautology, a contradiction
 
 Sometimes, we do not need to know what happens on every line of a truth table. Sometimes, just a single line or two will do. 
 
-\section{Direct Uses of Partial Truth Tables}\label{s:directPartialTruthTable}
+\section{Direct uses of partial truth tables}\label{s:directPartialTruthTable}
 
 \paragraph{Tautology.} 
 In order to show that a sentence is a tautology, we need to show that it is true on every valuation. That is to say, we need to know that it comes out true on every line of the truth table. So, it seems, we need a complete truth table. 
@@ -949,7 +949,7 @@ entailment? & all valuations: complete truth table & one valuation: partial trut
 \end{center}
 
 
-\section{Indirect Uses of Partial Truth Tables}
+\section{Indirect uses of partial truth tables}
 
 We just saw how to use partial truth tables to directly construct a valuation which demonstrates that an argument is invalid, or that some sentences are consistent, etc.
 
