--- a/forallx-adl-what.tex
+++ b/forallx-adl-what.tex
@@ -222,7 +222,7 @@ The point of all this is that inductive arguments – even good inductive argume
 
 
 
-\section{Making Conclusive Arguments Valid} % new section 2018
+\section{Making conclusive arguments valid} % new section 2018
 
 Some arguments which are conclusive but invalid can be turned into valid arguments. So consider again the argument `The sculpture is green all over; therefore it is not red all over'. We can make a valid argument from this by adding a premise: 
 	\begin{earg}
