--- a/forallxadl.tex
+++ b/forallxadl.tex
@@ -34,7 +34,7 @@ This book has been designed for use in conjunction with the University of Adelai
 \end{itemize}
 I appreciate any comments or corrections: \href{mailto:antony.eagle@adelaide.edu.au}{\nolinkurl{antony.eagle@adelaide.edu.au}}.
 
-\mainmatter
+\mainmatter \renewcommand{\thefigure}{\arabic{figure}}
 \include{forallx-adl-what}
 \include{forallx-adl-tfl}
 \include{forallx-adl-truthtables}
